--- a/9nd_flex_box_2.html
+++ b/9nd_flex_box_2.html
@@ -10,20 +10,22 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>flexbox01</title>
+  <title>flexbox02</title>
   <link rel="stylesheet" href="./common.css">
   <style type="text/css">
     .parent {
-      background: #D15C61;
       margin: 0 auto;
       padding: 20px;
       resize: both;
       display: flex;
-      justify-content: center;
-      align-items: center;
     }
     .child {
       padding: 20px;
+      margin: auto; /* 见证奇迹的时刻 */
+      
+      /* 居中元素是否宽高确定都可以居中 */
+      /* width: 300px;
+      height: 150px; */
     }
   </style>
 </head>
